err/pnmatcher.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/fullcoverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-4.4.2.dist-info'...
Listing './lib/python3.5/site-packages/digSparkUtil'...
Compiling './lib/python3.5/site-packages/digSparkUtil/ESUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/ESUtil.py", line 16
    print jsonObj
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/convertToSeq.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/convertToSeq.py", line 17
    print "Got options:", c_options
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/fileUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/fileUtil.py", line 180
    rdd_json = rdd.map(lambda (k, v): FileUtil.__dump_as_json(k, v, separator))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digSparkUtil/hbase_manager.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/hbase_manager.py", line 20
    print self.hbase_conf
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/jsonUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/jsonUtil.py", line 166
    print list(JSONUtil.extract_values_from_path(jsonObj1, "assignee.assignee"))
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digSparkUtil/seq2tsv.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/seq2tsv.py", line 12
    print 'usage: seq2tsv <filename>'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/testESUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/testESUtil.py", line 4
    print "### NO PYSPARK"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/digSparkUtil-1.0.23.egg-info'...
Listing './lib/python3.5/site-packages/nose2'...
Listing './lib/python3.5/site-packages/nose2/plugins'...
Listing './lib/python3.5/site-packages/nose2/plugins/loader'...
Listing './lib/python3.5/site-packages/nose2/tests'...
Listing './lib/python3.5/site-packages/nose2/tests/functional'...
Listing './lib/python3.5/site-packages/nose2/tests/unit'...
Listing './lib/python3.5/site-packages/nose2/tools'...
Listing './lib/python3.5/site-packages/nose2-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/phonenumbers'...
Listing './lib/python3.5/site-packages/phonenumbers/carrierdata'...
Listing './lib/python3.5/site-packages/phonenumbers/data'...
Listing './lib/python3.5/site-packages/phonenumbers/geodata'...
Listing './lib/python3.5/site-packages/phonenumbers/shortdata'...
Listing './lib/python3.5/site-packages/phonenumbers/tzdata'...
Listing './lib/python3.5/site-packages/phonenumbers-8.8.9.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pnmatcher'...
Listing './lib/python3.5/site-packages/pnmatcher/core'...
Listing './lib/python3.5/site-packages/pnmatcher/core/cleaner'...
Listing './lib/python3.5/site-packages/pnmatcher/core/common'...
Listing './lib/python3.5/site-packages/pnmatcher/core/common/datetime'...
Listing './lib/python3.5/site-packages/pnmatcher/core/extractor'...
Compiling './lib/python3.5/site-packages/pnmatcher/core/extractor/__init__.py'...
***   File "./lib/python3.5/site-packages/pnmatcher/core/extractor/__init__.py", line 83
    print Extractor().extract(text)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pnmatcher/core/normalizer'...
Listing './lib/python3.5/site-packages/pnmatcher/core/preprocessor'...
Compiling './lib/python3.5/site-packages/pnmatcher/core/preprocessor/__init__.py'...
***   File "./lib/python3.5/site-packages/pnmatcher/core/preprocessor/__init__.py", line 89
    print preprocessor.preprocess(sample)
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pnmatcher/core/tokenizer'...
Listing './lib/python3.5/site-packages/pnmatcher/core/validator'...
Compiling './lib/python3.5/site-packages/pnmatcher/core/validator/__init__.py'...
***   File "./lib/python3.5/site-packages/pnmatcher/core/validator/__init__.py", line 25
    except NumberParseException, e:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pnmatcher/res'...
Listing './lib/python3.5/site-packages/pnmatcher/res/area_code'...
Compiling './lib/python3.5/site-packages/pnmatcher/res/area_code/__init__.py'...
***   File "./lib/python3.5/site-packages/pnmatcher/res/area_code/__init__.py", line 16
    print get_all_country_iso_two_letter_code()
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pnmatcher/vendor'...
Listing './lib/python3.5/site-packages/pnmatcher/vendor/crf'...
Compiling './lib/python3.5/site-packages/pnmatcher/vendor/crf/crf_tokenizer.py'...
***   File "./lib/python3.5/site-packages/pnmatcher/vendor/crf/crf_tokenizer.py", line 316
    print t.tokenize("This is a sentence.")
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pnmatcher-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
